Se agrega el datepicker a bootstrap

--- a/presentacion/src/main/webapp/resources/themes/css/main.css
+++ b/presentacion/src/main/webapp/resources/themes/css/main.css
@@ -776,3 +776,8 @@ section.our_client .row{
 		border-bottom:1px solid #eee;
 	}
 }
+
+.paginaActiva{
+	background-color:#eb4800;
+	color:#fff !important;
+}
