Pantallas y controller de crud de paquetes parte 1

--- a/presentacion/src/main/webapp/resources/bootstrap/css/bootstrap.css
+++ b/presentacion/src/main/webapp/resources/bootstrap/css/bootstrap.css
@@ -6168,3 +6168,15 @@ a.badge:focus {
 .affix {
   position: fixed;
 }
+
+
+/* Estilo propio */
+#tablaServicios td{
+	text-align: center;
+}
+#tablaServicios th{
+	text-align: center;
+	font-size: 11px; 
+	color: #eb4800; 
+	text-transform: uppercase;
+}
