--- a/logica/.settings/org.eclipse.wst.common.component
+++ b/logica/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,9 @@
         <dependent-module archiveName="entidades-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/entidades/entidades">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="mensajeria-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mensajeria/mensajeria">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     <property name="context-root" value="logica"/>
     <property name="java-output-path" value="/target/classes"/>
     <wb-resource deploy-path="/WEB-INF/classes" source-path="src/main/java"/>
